// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Appointment: Table for storing appointment details including doctor and patient associations.
Doctor: Table for storing doctor information in the clinic.
Patient: Table for storing patient information in the clinic.
ClinicStaff: Table for storing clinic staff information.
Equipment: Table for storing clinic equipment information.
Inventory: Table for managing inventory items in the clinic.
Invoice: Table for storing invoice information related to appointments.
MedicalRecord: Table for storing medical records associated with a patient.
Payment: Table for recording payments for invoices.
Prescription: Table for storing prescriptions linked to appointments.
Room: Table for storing information about rooms available in the clinic.
Supplier: Table for storing supplier information associated with clinic consumables.
'''
}

Table Appointment {
    id INTEGER [primary key]
    patient_id INTEGER 
    doctor_id INTEGER 
    appointment_date DATETIME 
    reason VARCHAR 
    }

Table Doctor {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    specialization VARCHAR 
    }

Table Patient {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    dob DATE 
    gender VARCHAR(1) 
    phone_number VARCHAR 
    }

Table ClinicStaff {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    position VARCHAR 
    }

Table Equipment {
    id INTEGER [primary key]
    equipment_name VARCHAR 
    equipment_type VARCHAR 
    purchase_date DATETIME 
    }

Table Inventory {
    id INTEGER [primary key]
    item_name VARCHAR 
    quantity INTEGER 
    }

Table Invoice {
    id INTEGER [primary key]
    appointment_id INTEGER 
    total_amount INTEGER 
    paid_amount INTEGER 
    due_date DATETIME 
    }

Table MedicalRecord {
    id INTEGER [primary key]
    patient_id INTEGER 
    record_date DATETIME 
    diagnosis VARCHAR 
    treatment VARCHAR 
    }

Table Payment {
    id INTEGER [primary key]
    invoice_id INTEGER 
    payment_date DATETIME 
    amount INTEGER 
    method VARCHAR 
    }

Table Prescription {
    id INTEGER [primary key]
    appointment_id INTEGER 
    medication_name VARCHAR 
    dosage VARCHAR 
    start_date DATETIME 
    end_date DATETIME 
    }

Table Room {
    id INTEGER [primary key]
    room_number VARCHAR 
    room_type VARCHAR 
    }

Table Supplier {
    id INTEGER [primary key]
    supplier_name VARCHAR 
    contact_number VARCHAR 
    address VARCHAR 
    }



// Relationships
    Ref: Appointment.(doctor_id) < Doctor.(id)
    Ref: Appointment.(patient_id) < Patient.(id)
    Ref: Invoice.(appointment_id) < Appointment.(id)
    Ref: MedicalRecord.(patient_id) < Patient.(id)
    Ref: Payment.(invoice_id) < Invoice.(id)
    Ref: Prescription.(appointment_id) < Appointment.(id)
